--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "convert-json-schema-to-mongoose": "^0.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "mongoose": "^6.6.7",
     "uuid": "^9.0.0"
   }
